--- a/README.adoc
+++ b/README.adoc
@@ -25,8 +25,6 @@ instructions to make the setup as painless as possible.
 
 TODO: `found-executable-p` shouldn't use `which`
 
-TODO: Replace wget with `download`
-
 TODO: Tryout Clib to bundle Plan9port with this repository
 
 TODO: Make a script to update Elixir: https://github.com/elixir-lang/elixir/releases/
@@ -2467,7 +2465,7 @@ if (! ~ $latest_version $current_version) {
 	echo Versions mismatch, downloading latest one
 
 	cd /m/opt
-	wget $download_url
+	download $download_url
 	chmod +x $installer
 	exec bash $installer
 }
@@ -2534,7 +2532,7 @@ if (! ~ $current_version $latest_version) {
 	mkdir -p $opt
 	cd $opt
 	rm -f nim
-	wget $download_url
+	download $download_url
 	$tar xf $downloaded_file
 
 	echo '-> Symlinking '$opt/$downloaded_file' -> '$opt/nim
