[refactor] Use let instead of var for Nim

--- a/README.adoc
+++ b/README.adoc
@@ -2069,7 +2069,7 @@ test -L "$@"
 import os, strutils
 
 proc showHelp =
-  var
+  let
     (_, thisApp) = getAppFilename().splitPath()
   echo """Usage: $1 <file>
 
