[todo] Use report-missing-executables and Nim local library

--- a/README.adoc
+++ b/README.adoc
@@ -23,7 +23,7 @@ I have just rewritten this README since today (Jan 10^^th^^, 2016).  In the next
 couple of days, I will include all installation scripts and detailed
 instructions to make the setup as painless as possible.
 
-TODO: Add `report-missing-executables <bin> <software> <bin> <software> ...`
+TODO: Use `report-missing-executables <bin> <software> <bin> <software> ...`
 
 TODO: Tryout Clib to bundle Plan9port with this repository
 
@@ -32,6 +32,8 @@ TODO: Make a script to update Elixir: https://github.com/elixir-lang/elixir/rele
 TODO: Make a script ot update Docker Compose and Docker Machine
 
 TODO: Add development dependency: Nim
+
+TODO: Create a local Nim library based on the helpers/utilities
 
 ```
 https://github.com/docker/compose/releases
