[feat] Add audio-mute

--- a/README.adoc
+++ b/README.adoc
@@ -999,6 +999,24 @@ for (id in $ids) {
 
 ----
 
+=== `audio-mute`
+
+.file::audio-mute
+[source,sh]
+----
+#!/usr/bin/env rc
+
+ids=`{ \
+	pactl list sinks short \
+	| awk '{ print $1 }'
+}
+
+for (id in $ids) {
+	pactl set-sink-mute $id 1
+}
+
+----
+
 === `extract-audio`
 
 Extracts from a video file, creating the same file name with appropriate
