feat: Make config-logitech-g502-mouse play nicely with shitty updates from Debian

--- a/README.adoc
+++ b/README.adoc
@@ -679,6 +679,12 @@ for mouse_ in "${id_}" "${id_2_}"; do
 	xinput set-prop "${mouse_}" "Device Accel Profile" 7
 	xinput set-prop "${mouse_}" "Device Accel Constant Deceleration" 2
 	xinput set-prop "${mouse_}" "Device Accel Adaptive Deceleration" 1
+
+	# For some damn reasons, Debian updates constantly break...  evdev was
+	# replaced by libinput.  I haven't found this change documented anywhere.
+	# FFS, if you want to change, how hard is it to mark something as
+	# deprecated then warn your users?  Eff you Debian!
+	xinput set-prop "${mouse_}" "libinput Natural Scrolling Enabled" 1
 done
 
 ----
