--- a/README.adoc
+++ b/README.adoc
@@ -632,23 +632,14 @@ setxkbmap us -device "${id_keyboard_}"
 
 ##############################################################################
 
-id_=$( \
+ids_=$( \
 	xinput list \
 	| grep "Logitech Gaming Mouse G502" \
-	| head -1 \
-	| cut -d'=' -f2 \
-	| awk '{ print $1 }' \
-)
-id_2_=$( \
-	xinput list \
-	| grep "Logitech Gaming Mouse G502" \
-	| tail -1 \
 	| cut -d'=' -f2 \
 	| awk '{ print $1 }' \
 )
 
-test -z "${id_}"   && exit 0
-test -z "${id_2_}" && exit 0
+test -z "${ids_}"   && exit 0
 
 ##############################################################################
 
@@ -657,7 +648,7 @@ do-notify "Configuring Logitech G502 mouse
 * Tuning mouse movement
 "
 
-for mouse_ in "${id_}" "${id_2_}"; do
+for mouse_ in ${ids_}; do
 	xinput set-prop "${mouse_}" "Evdev Scrolling Distance" -1, -1, 1
 	xinput set-prop "${mouse_}" "Device Accel Profile" 7
 	xinput set-prop "${mouse_}" "Device Accel Constant Deceleration" 2
