--- a/README.adoc
+++ b/README.adoc
@@ -426,6 +426,7 @@ prefix $comment_char^' '
 
 test -z "${DISPLAY}" && exit 0
 
+do-notify-short "Enabling Right Alt as AltGr"
 setxkbmap us -variant dvp -option lv3:ralt_alt
 xmodmap <( cat <<EOF
 ! -*- mode: xmodmap-generic -*-
